# CPlayground

./: CMakeLists.txt  README.md  build.sh  main.c  run.sh  trc.c  trc.h  trc_register_spec_for_code_generation.txt
